# basic-chat

./: pyproject.toml
http_long_polling/: app.py  index.htm
http_polling/: app.py  index.htm
websocket/: app.py  index.htm
